@@ -40,10 +40,10 @@ enum {
 };
 
 typedef enum {
-    FORMAT_RGBA8888 = 0, /* XXX: Only used internally. */
     FORMAT_BGRA8888 = 1,
     FORMAT_BGR565   = 3,
     FORMAT_BGRA4444 = 5,
+    FORMAT_RGBA8888 = 6, /* XXX: Also used internally. */
     FORMAT_GRAY8    = 7
 } format_t;
 
